include/xraylib.h

/* Total cross sections (photoionization+Rayleigh+Compton) using Kissel Total photoelectric cross sections */
XRL_EXTERN
double CS_Total_Kissel(int Z, double E, xrl_error **error);
XRL_EXTERN
double CSb_Total_Kissel(int Z, double E, xrl_error **error);
/* Electron configuration (according to Kissel) */
XRL_EXTERN
double ElectronConfig(int Z, int shell, xrl_error **error);
/* Cross Section functions using the compound parser */
XRL_EXTERN
double CS_Total_CP(const char compound[], double E, xrl_error **error);
XRL_EXTERN
double CS_Photo_CP(const char compound[], double E, xrl_error **error);
XRL_EXTERN
double CS_Rayl_CP(const char compound[], double E, xrl_error **error);
XRL_EXTERN
double CS_Compt_CP(const char compound[], double E, xrl_error **error);
XRL_EXTERN
double CSb_Total_CP(const char compound[], double E, xrl_error **error);
XRL_EXTERN
double CSb_Photo_CP(const char compound[], double E, xrl_error **error);
XRL_EXTERN
double CSb_Rayl_CP(const char compound[], double E, xrl_error **error);
XRL_EXTERN
double CSb_Compt_CP(const char compound[], double E, xrl_error **error);
XRL_EXTERN
double DCS_Rayl_CP(const char compound[], double E, double theta, xrl_error **error);
XRL_EXTERN
double DCS_Compt_CP(const char compound[], double E, double theta, xrl_error **error);
XRL_EXTERN
double DCSb_Rayl_CP(const char compound[], double E, double theta, xrl_error **error);
XRL_EXTERN
double DCSb_Compt_CP(const char compound[], double E, double theta, xrl_error **error);
XRL_EXTERN
double DCSP_Rayl_CP(const char compound[], double E, double theta, double phi, xrl_error **error);
XRL_EXTERN
double DCSP_Compt_CP(const char compound[], double E, double theta, double phi, xrl_error **error);
XRL_EXTERN
double DCSPb_Rayl_CP(const char compound[], double E, double theta, double phi, xrl_error **error);
XRL_EXTERN
double DCSPb_Compt_CP(const char compound[], double E, double theta, double phi, xrl_error **error);
XRL_EXTERN
double CS_Photo_Total_CP(const char compound[], double E, xrl_error **error);
XRL_EXTERN
double CSb_Photo_Total_CP(const char compound[], double E, xrl_error **error);
XRL_EXTERN
double CS_Total_Kissel_CP(const char compound[], double E, xrl_error **error);
XRL_EXTERN
double CSb_Total_Kissel_CP(const char compound[], double E, xrl_error **error);
XRL_EXTERN
double CS_Energy_CP(const char compound[], double E, xrl_error **error);
/* Refractive indices functions */
XRL_EXTERN
double Refractive_Index_Re(const char compound[], double E, double density, xrl_error **error);
XRL_EXTERN
double Refractive_Index_Im(const char compound[], double E, double density, xrl_error **error);
XRL_EXTERN
xrlComplex Refractive_Index(const char compound[], double E, double density, xrl_error **error);
/* ComptonProfiles */
XRL_EXTERN
double ComptonProfile(int Z, double pz, xrl_error **error);
XRL_EXTERN
double ComptonProfile_Partial(int Z, int shell, double pz, xrl_error **error);
/* Atomic level widths */
XRL_EXTERN
double AtomicLevelWidth(int Z, int shell, xrl_error **error);
/* Auger non-radiative rates */
XRL_EXTERN
double AugerRate(int Z, int auger_trans, xrl_error **error);
/* Auger yield */
XRL_EXTERN
double AugerYield(int Z, int shell, xrl_error **error);