pascal/xraylib.pas


  { Total cross sections (photoionization+Rayleigh+Compton) using Kissel Total photoelectric cross sections  }
  function CS_Total_Kissel(Z:Integer; E:double):double;cdecl;external External_library name 'CS_Total_Kissel';

  function CSb_Total_Kissel(Z:Integer; E:double):double;cdecl;external External_library name 'CSb_Total_Kissel';

  { Electron configuration (according to Kissel)  }
  function ElectronConfig(Z:Integer; shell:Integer):double;cdecl;external External_library name 'ElectronConfig';

  { Cross Section functions using the compound parser  }
(* Const before type ignored *)
  function CS_Total_CP(compound:Pchar; E:double):double;cdecl;external External_library name 'CS_Total_CP';

(* Const before type ignored *)
  function CS_Photo_CP(compound:Pchar; E:double):double;cdecl;external External_library name 'CS_Photo_CP';

(* Const before type ignored *)
  function CS_Rayl_CP(compound:Pchar; E:double):double;cdecl;external External_library name 'CS_Rayl_CP';

(* Const before type ignored *)
  function CS_Compt_CP(compound:Pchar; E:double):double;cdecl;external External_library name 'CS_Compt_CP';

(* Const before type ignored *)
  function CSb_Total_CP(compound:Pchar; E:double):double;cdecl;external External_library name 'CSb_Total_CP';

(* Const before type ignored *)
  function CSb_Photo_CP(compound:Pchar; E:double):double;cdecl;external External_library name 'CSb_Photo_CP';

(* Const before type ignored *)
  function CSb_Rayl_CP(compound:Pchar; E:double):double;cdecl;external External_library name 'CSb_Rayl_CP';

(* Const before type ignored *)
  function CSb_Compt_CP(compound:Pchar; E:double):double;cdecl;external External_library name 'CSb_Compt_CP';

(* Const before type ignored *)
  function DCS_Rayl_CP(compound:Pchar; E:double; theta:double):double;cdecl;external External_library name 'DCS_Rayl_CP';

(* Const before type ignored *)
  function DCS_Compt_CP(compound:Pchar; E:double; theta:double):double;cdecl;external External_library name 'DCS_Compt_CP';

(* Const before type ignored *)
  function DCSb_Rayl_CP(compound:Pchar; E:double; theta:double):double;cdecl;external External_library name 'DCSb_Rayl_CP';

(* Const before type ignored *)
  function DCSb_Compt_CP(compound:Pchar; E:double; theta:double):double;cdecl;external External_library name 'DCSb_Compt_CP';

(* Const before type ignored *)
  function DCSP_Rayl_CP(compound:Pchar; E:double; theta:double; phi:double):double;cdecl;external External_library name 'DCSP_Rayl_CP';

(* Const before type ignored *)
  function DCSP_Compt_CP(compound:Pchar; E:double; theta:double; phi:double):double;cdecl;external External_library name 'DCSP_Compt_CP';

(* Const before type ignored *)
  function DCSPb_Rayl_CP(compound:Pchar; E:double; theta:double; phi:double):double;cdecl;external External_library name 'DCSPb_Rayl_CP';

(* Const before type ignored *)
  function DCSPb_Compt_CP(compound:Pchar; E:double; theta:double; phi:double):double;cdecl;external External_library name 'DCSPb_Compt_CP';

(* Const before type ignored *)
  function CS_Photo_Total_CP(compound:Pchar; E:double):double;cdecl;external External_library name 'CS_Photo_Total_CP';

(* Const before type ignored *)
  function CSb_Photo_Total_CP(compound:Pchar; E:double):double;cdecl;external External_library name 'CSb_Photo_Total_CP';

(* Const before type ignored *)
  function CS_Total_Kissel_CP(compound:Pchar; E:double):double;cdecl;external External_library name 'CS_Total_Kissel_CP';

(* Const before type ignored *)
  function CSb_Total_Kissel_CP(compound:Pchar; E:double):double;cdecl;external External_library name 'CSb_Total_Kissel_CP';

(* Const before type ignored *)
  function CS_Energy_CP(compound:Pchar; E:double):double;cdecl;external External_library name 'CS_Energy_CP';

  { Refractive indices functions  }
(* Const before type ignored *)
  function Refractive_Index_Re(compound:Pchar; E:double; density:double):double;cdecl;external External_library name 'Refractive_Index_Re';

(* Const before type ignored *)
  function Refractive_Index_Im(compound:Pchar; E:double; density:double):double;cdecl;external External_library name 'Refractive_Index_Im';

(* Const before type ignored *)
  function Refractive_Index(compound:Pchar; E:double; density:double):xrlComplex;cdecl;external External_library name 'Refractive_Index';

  { ComptonProfiles  }
  function ComptonProfile(Z:Integer; pz:double):double;cdecl;external External_library name 'ComptonProfile';

  function ComptonProfile_Partial(Z:Integer; shell:Integer; pz:double):double;cdecl;external External_library name 'ComptonProfile_Partial';

  { Atomic level widths  }
  function AtomicLevelWidth(Z:Integer; shell:Integer):double;cdecl;external External_library name 'AtomicLevelWidth';

  { Auger non-radiative rates  }
  function AugerRate(Z:Integer; auger_trans:Integer):double;cdecl;external External_library name 'AugerRate';

  { Auger yield  }
  function AugerYield(Z:Integer; shell:Integer):double;cdecl;external External_library name 'AugerYield';

  { this is giving a lot of trouble with python  }

  function c_abs(x:xrlComplex):double;cdecl;external External_library name 'c_abs';

  function c_mul(x:xrlComplex; y:xrlComplex):xrlComplex;cdecl;external External_library name 'c_mul';

  { Struct for an atom in a crystal.  }
  { Atomic number of atom.  }
  { Fractional contribution. Normally 1.0.  }
  { Atom position in fractions of the unit cell lengths.  }

  type
    Crystal_Atom = record
        Zatom : Integer;
        fraction : double;
        x : double;
        y : double;
        z : double;
      end;
  { Struct for a crystal.  }
  { Name of crystal.  }
  { Unit cell size in Angstroms.  }
  { Unit cell angles in degrees.  }
  { Unit cell volume in Angstroms^3.  }
  { Number of atoms.  }
  { Array of atoms in unit cell.  }

    Crystal_Struct = record
        name : ^char;
        a : double;
        b : double;
        c : double;
        alpha : double;
        beta : double;
        gamma : double;
        volume : double;
        n_atom : Integer;
        atom : ^Crystal_Atom;
      end;
  { Container struct to hold an array of CrystalStructs  }
  { Number of defined crystals.  }
  { Size of .crystal array malloc'd  }

    Crystal_Array = record
        n_crystal : Integer;
        n_alloc : Integer;
        crystal : ^Crystal_Struct;
      end;
  {
   *
   * this header includes the prototype of a function designed to parse
   * chemical formulas and a structure definition which is used to store the information.
   *
    }
  {
   * A compoundData structure will be used to store the results after parsing:
   * 	nElements: the number of different atoms present
   * 	nAtomsAll: the total number of atoms present in the compound
   * 	Elements: an array with length nElements that will contain the atomic
   * 	  numbers of the different elements present in the compound, 
   * 	  in ascending order. The array memory will be allocated using malloc 
   * 	  and should be freed by the user when appropriate.
   *	massFractions: an array with length nElements that will contain
   *	  the atomic mass fractions of the different elements present in the compound,
   *	  in an order corresponding with the Elements array. The sum of the values
   *	  in this array is equal to 1. The array memory will be allocated 
   *	  using malloc and should be freed by the user when appropriate.
   *
   * For SiO2 this would yield a structure with contents:
   *  nElements: 2
   *  nAtomsAll: 3
   *  Elements: 8 14
   *  massFractions: 0.467465  0.532535
   *
   *
   *
    }
  type
    compoundData = record
        nElements : Integer;
        nAtomsAll : double;
        Elements : array of Integer;
        massFractions : array of double;
      end;
    PcompoundData  = ^compoundData;



    function AtomicNumberToSymbol(Z:Integer):string;
    function SymbolToAtomicNumber(symbol:string):Integer;
    function CompoundParser(compound:string):PcompoundData;

implementation

  type
    compoundData_C = record
        nElements : Integer;
        nAtomsAll : double;
        Elements : ^Integer;
        massFractions : ^double;
      end;
    PcompoundData_C  = ^compoundData_C;
  { 
   * FreeCompoundData is used to free the memory allocated
   * by CompoundParser in a compoundData struct. It is recommended
   * to set the value of the struct to NULL after calling this function.
    }

  procedure FreeCompoundData(_para1:PcompoundData_C);cdecl;external External_library name 'FreeCompoundData';

  {
   * The CompoundParser function will parse a string and will return 
   * a pointer to a compoundData structure if successful, otherwise it will return a
   * NULL pointer. After usage, the struct can be freed with FreeCompoundData
    }
(* error 
struct compoundData *CompoundParser(const char compoundString[]);
in declaration at line 74 *)
  function CompoundParser_C(compoundString:PChar):PcompoundData_C;cdecl;external External_library name 'CompoundParser';
    {
     * The AtomicNumberToSymbol function returns a pointer to a string containing the element symbol.
     * If an error occurred, the NULL string is returned.
     * The string should be freed after usage with the xrlFree function
      }
    function AtomicNumberToSymbol_C(Z:Integer):Pchar;cdecl;external External_library name 'AtomicNumberToSymbol';

    {
     * The SymbolToAtomicNumber function returns the atomic number that corresponds with element symbol
     * If the element does not exist, 0 is returned
      }
    function SymbolToAtomicNumber_C(symbol:Pchar):Integer;cdecl;external External_library name 'SymbolToAtomicNumber';

    {
     *  xrlFree frees memory that was dynamically allocated by xraylib. For now it should only be used
     *  in combination with AtomicNumberToSymbol and add_compound_data
      }
    procedure xrlFree(_para1:pointer);cdecl;external External_library name 'xrlFree';
function AtomicNumberToSymbol(Z:Integer):string;
var
	temp:Pchar;
begin
	temp := AtomicNumberToSymbol_C(Z);
	if (temp <> nil) then
	begin
		AtomicNumberToSymbol := strpas(temp);
		xrlFree(temp)
	end
	else
		AtomicNumberToSymbol := '';
end;

function SymbolToAtomicNumber(symbol:string):Integer;
var
	temp:Pchar;
begin
	temp := StrAlloc(length(symbol)+1); 
	StrPCopy(temp, symbol);
	SymbolToAtomicNumber := SymbolToAtomicNumber_C(temp);
	StrDispose(temp);
end;

function CompoundParser(compound:string):PcompoundData;
var
	i:Integer;
	temp:Pchar;
	data_C:PcompoundData_C;
	Elements:^Integer;
	massFractions:^Double;
begin
	temp := StrAlloc(length(compound)+1); 
	StrPCopy(temp, compound);
	data_C := CompoundParser_C(temp);
	if (data_C = nil) then
	begin
		CompoundParser := nil;
		Exit;
	end;

	new(CompoundParser);

	SetLength(CompoundParser^.Elements, data_C^.nElements);
	SetLength(CompoundParser^.massFractions, data_C^.nElements);
	CompoundParser^.nElements := data_C^.nElements;
	CompoundParser^.nAtomsAll:= data_C^.nAtomsAll;
	Elements := data_C^.Elements;
	massFractions := data_C^.massFractions;

	for  i := 0 to CompoundParser^.nElements-1 do
	begin
		CompoundParser^.Elements[i] := Elements^;
		CompoundParser^.massFractions[i] := massFractions^;
		inc(Elements);
		inc(massFractions);
	end;
	FreeCompoundData(data_C)
end;


end.
